# news-app

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  compose.base.yml  compose.prod.yml  compose.yml  deploy.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: backend.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  config.py  constants.py  dramatiq.py  dramatiq_tasks.py  entrypoint.sh  entrypoint_backend.sh  entrypoint_dramatiq.sh  get_images_from_wikimedia.py  init_testing_data.py  input_news_trigger.py  logger.py  main.py  news_processing.py  pyproject.toml  railway.json  schemas.py  script.py  send_email.py  setup_cron.sh  test_news_processing.py  tests.py
backend/alembic/: env.py
backend/alembic/versions/: 04530fc768de_added_views_count.py  1473bcdf4d4c_added_importancy_of_parsed_news.py  16e54104edeb_added_deletion_links.py  457bd7bd915a_initial_migration.py  4d99410192dd_added_picks.py  54ac58121805_initial_migration_data.py  a4f69f3e306a_added_news_scope.py  c98f0fb7c230_view_of_parsed_news.py  dfe1ce1233b2_renamed_date_in_news_pick_and_unique_.py  ed559a496395_change_inputnews_model.py  f3296fb75839_accent_function.py
backend/core/: config.py  converters.py  engine.py  exceptions.py  logger.py  models.py  redis_client.py  repository.py  secrets.py
backend/core/domain/: account_service.py  email_service.py  news_service.py  schemas.py  token_generator.py  topic_service.py
backend/core/presentation/: schemas.py
backend/database/: engine.py  models.py  repository.py
backend/features/api_service/: converters.py
backend/features/api_service/database/: models.py  repository.py
backend/features/api_service/services/: news_service.py  schemas.py  topic_service.py
backend/features/input_news_processing/: application_logic.py  converters.py
backend/features/input_news_processing/ai_library/: __init__.py  abstract_model.py  deepinfra_model.py  gemini_model.py  get_model.py  model_factory.py  openai_model.py
backend/features/input_news_processing/archive/: abstract_archive.py  local_archive.py
backend/features/input_news_processing/database/: models.py  repository.py
backend/features/input_news_processing/domain/: ai_prompts.py  article_generation_service.py  input_news_service.py  pick_generation_service.py  schemas.py
backend/features/input_news_processing/services/: ai_prompts.py  article_generation_service.py  input_news_service.py  schemas.py
backend/features/input_news_processing/testing_data/: additional_input_news.py  common.py  common_testing_data.py  initial_input_news.py
backend/services/: converters.py  dependencies.py  input_news_service.py  news_service.py  topic_service.py
backend/tests/: test_news_processing.py
backend/topic_generation/: input_news_logic.py  input_news_schema.py
backend/topic_generation/testing_data/: common.py  common_testing_data.py  initial_input_news.py
backend/wheels/: ai_knowledge_bot-0.1.0-py3-none-any.whl  ai_knowledge_bot-0.2.0-py3-none-any.whl  ai_knowledge_bot-0.3.0-py3-none-any.whl
caddy/: Caddyfile
envs/: common_dev.env  common_prod.env
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/cookie-policy/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx
frontend/src/components/News/: ArticleCard.tsx  CategoryNav.tsx  FeaturedArticle.tsx
frontend/src/components/common/: Loading.tsx  LogoWithFallback.tsx  SortDropdown.tsx
frontend/src/components/layout/: CookiebotScript.tsx  Footer.tsx  Header.tsx
frontend/src/components/news/: ArticleCard.tsx  ArticleContent.tsx  (+7 more)
frontend/src/data/: newData.tsx
frontend/src/lib/: categoryEmoji.ts  date.ts
frontend/src/services/: api.ts  https.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
(+10 files in other folders)
