[project]
name = "news-app"
version = "0.1.0"
description = ""
authors = [
    { name = "Simon Foucek", email = "sfoucek@redhat.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
    "psycopg[binary,pool]>=3.2.6",
    "alembic>=1.15.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
    "instructor>=1.7.9",
    "google-generativeai>=0.8.5",
    "jsonref>=1.1.0",
    "structlog>=25.4.0",
    "tenacity>=9.1.2",
    "dramatiq",
    "redis",
    "ai-knowledge-bot",
    "greenlet>=3.2.3",
    "periodiq>=0.13.0",
    "setuptools>=80.9.0",
]
[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "ruff>=0.12.4",
]
[tool.uv]
package = false

[tool.uv.sources]
ai-knowledge-bot = { path = "wheels/ai_knowledge_bot-0.1.0-py3-none-any.whl" }
[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
[[tool.mypy.overrides]]
module = [
    "cz_news.*",
    "google.generativeai.*",
    "periodiq.*",
    "dramatiq.*",
    "google.generativeai"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP"]